--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         <a class="logo" href="/"><img src="public/ressources/banner-min.png" alt="logo"></a>
         <nav>
           <ul class="nav__links">
-            <li><a target="__blank" href="https://guide.draftbot.com">About</a></li>
+            <li><a target="_blank" href="https://guide.draftbot.com">About</a></li>
             <li><a href="#add">Add the bot to your server</a></li>
-            <li><a target="__blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
-            <li><a target="__blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
-            <li><a target="__blank" href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
+            <li><a target="_blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
+            <li><a target="_blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
+            <li><a target="_blank" href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
           </ul>
         </nav>
         <!-- TODO: 
@@ -68,11 +68,11 @@
       <div class="overlay">
         <a class="close">&times;</a>
         <div class="overlay__content">
-          <li><a target="__blank" href="https://guide.draftbot.com">About</a></li>
+          <li><a target="_blank" href="https://guide.draftbot.com">About</a></li>
           <li><a href="#add">Add the bot to your server</a></li>
-          <li><a target="__blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
-          <li><a target="__blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
-          <li><a target="__blank" href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
+          <li><a target="_blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
+          <li><a target="_blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
+          <li><a target="_blank" href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
           <!-- TODO: 
             <li><a href="/fr">Passer en Français</a></li>
           -->
@@ -183,7 +183,7 @@
             The whole community works together to create and improve the game experience. Your help is more than
             welcome!
             You can follow our progression <a href="https://github.com/BastLast/DraftBot-A-Discord-Adventure"
-              target="__blank">here on github!</a>
+              target="_blank">here on github!</a>
           </div>
         </div>
       </div>
@@ -207,7 +207,7 @@
             The bot only needs basic permissions <b>in one channel</b> to be fully functional!
             All the features are unlocked without giving access to your precious server's admin pannel.
             <br><b>Join the DraftBot's discord server to add the bot to your server: <a
-                href="https://discord.com/invite/5JqrMtZ" target="__blank">Click here!</a></b>
+                href="https://discord.com/invite/5JqrMtZ" target="_blank">Click here!</a></b>
           </div>
         </div>
       </div>
@@ -223,7 +223,7 @@
           </h1>
           <div class="text">
             We wrote a complete guide to help you start your adventure and contribute to the project! You can learn
-            everything about the project <a href="https://guide.draftbot.com" target="__blank">here on gitbook!</a>
+            everything about the project <a href="https://guide.draftbot.com" target="_blank">here on gitbook!</a>
           </div>
         </div>
       </div>
