--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </div>
   </section>
 
-  <section style="padding-bottom: 150px;">
+  <section class="mediumMargin" style="padding-bottom: 150px;">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
         <div class="description">
