--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
           <stop offset="0%" stop-color="#fff" />
         </linearGradient>
-        <path fill="none" d="
+        <path fill="url(#grad1)" d="
                     M0 67
                     C 273,183
                     822,-40
@@ -104,7 +104,7 @@
                     H 0
                     V 67
                     Z">
-          <animate repeatCount="indefinite" fill="none" attributeName="d" dur="35s" attributeType="XML" values="
+          <animate repeatCount="indefinite" fill="url(#grad1)" attributeName="d" dur="35s" attributeType="XML" values="
                     M0 77
                     C 473,283
                     822,-40
@@ -145,7 +145,7 @@
   </div>
   <section class="verySmallMargin" id="imgExample">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
-      <img alt="Gameplay example" src="public/ressources/example-white-min.png" class="screen pc-content">
+      <img alt="Gameplay example" src="public/ressources/example-white-min.png" class="shadowed pc-content">
     </div>
     <div class="container smallMargin-pc smallMarginBottom" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
