deleted style in html #199

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     })();
   </script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
     integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
     crossorigin="anonymous"></script>
@@ -83,7 +82,7 @@
 
       <div class="hero-infos">
         <div class="title">Draftbot - A Discord Adventure</div>
-        <a href="https://discord.gg/WwgBfSg" class="button buttonWhite buttonLarge" style="margin-top: 24px"><i
+        <a href="https://discord.gg/WwgBfSg" class="button buttonWhite buttonLarge" id="buttonJoin"><i
             class="fab fa-discord buttonIcon"></i>
           Join the community!</a>
         <a href="https://guide.draftbot.com" class="button buttonGrey buttonLarge buttonUse"><i
@@ -217,7 +216,7 @@
     </div>
   </section>
 
-  <section class="mediumMargin" style="padding-bottom: 150px;">
+  <section class="mediumMargin paddingWave">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
         <div class="description">
