--- a/index.html
+++ b/index.html
@@ -293,8 +293,10 @@
 
       <p class="copyright center">
         MIT License -
-        <var id="year">2020</var> | Made with <i class="fas fa-heart"></i> by <a href="https://behance.net/mw3y"
-          target="_blank">MΛX</a> and <a href="https://twitter.com/Bastlast_" target="_blank">BastLast</a>, icons from
+        <var id="year">2020</var> | Check Draftbot on <a href="https://twitter.com/Draftbot_"
+          target="_blank">Twitter</a> ! |Made with <i class="fas fa-heart"></i> by
+        <a href="https://behance.net/mw3y" target="_blank">MΛX</a> and <a href="https://twitter.com/Bastlast_"
+          target="_blank">BastLast</a>, icons from
         <a href="https://icons8.com" target="_blank">icons8.com</a> &
         background by <a
           href='https://www.freepik.com/free-vector/medieval-castle-interior-flat-cartoon-composition-with-king-throne-armed-knight-coat-arms-guard_6845842.htm'>macrovector
