--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     crossorigin="anonymous" as="style">
   <link rel="stylesheet" href="public/css/home.css">
 
-  <script async src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
     integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
