--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         </div>
       </div>
       <div class="div-2">
-        <img src="public/ressources/logo-retro-min.png" class="Bigquestion pc-content">
+        <img alt="logo retro draftbiot" src="public/ressources/logo-retro-min.png" class="Bigquestion pc-content">
       </div>
     </div>
     <div class="waves">
