Added touch icon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     gtag('config', 'UA-167755232-2');
   </script>
 
+  <link rel="apple-touch-icon" sizes="128x128"
+    href="https://bastlast.github.io/DraftBot-A-Discord-Adventure/public/ressources/logo-min.png" />
   <title>Draftbot - A Discord Adventure</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
