--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
-    content="A Discord bot based on a text adventure game. Begin your journey in a medieval world to win the kingdom's princess's hand.">
+    content="DraftBot is an open-source Discord bot based on a multiplayer text adventure game. Begin your journey in a medieval world and battle to win the kingdom's princess's hand.">
   <meta property='og:image'
     content='https://bastlast.github.io/DraftBot-A-Discord-Adventure/public/ressources/logo-min.png' />
   <meta property="og:site_name" content="draftbot.draft" />
