improved title and added robot.txt

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="apple-touch-icon" sizes="128x128"
     href="https://bastlast.github.io/DraftBot-A-Discord-Adventure/public/ressources/logo-min.png" />
-  <title>DraftBot - A multiplayer role-play game on Discord</title>
+  <title>DraftBot - A multiplayer role-play game for Discord</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
