--- a/fr/index.html
+++ b/fr/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <title>Draftbot - A Discord Adventure</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
     content="A Discord bot based on a text adventure game. Begin your journey in a medieval world to win the kingdom's princess's hand.">
-  <meta property='og:image' content='public/logo.png'/>
-  <meta property="og:site_name" content="draftbot.tk"/>
+  <meta property='og:image' content='public/logo.png' />
+  <meta property="og:site_name" content="draftbot.tk" />
 
   <!-- Favicon -->
-  <link href="public/ressources/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-  <link href="public/ressources/favicon.ico" rel="icon" type="image/x-icon"/>
+  <link href="public/ressources/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link href="public/ressources/favicon.ico" rel="icon" type="image/x-icon" />
 
   <link rel="stylesheet" href="public/css/home.css">
 
@@ -88,7 +89,8 @@
 
     <div class="hero-infos">
       <div class="title">A Discord Adventure</div>
-      <div class="description">The story takes place in a medieval world where the player embodies an adventurer who wants<br>to win a competition launched by the king, to win the princess' hand.</div>
+      <div class="description">The story takes place in a medieval world where the player embodies an adventurer who
+        wants<br>to win a competition launched by the king, to win the princess' hand.</div>
       <a href="/invite" class="button buttonWhite buttonLarge" style="margin-top: 24px"><i
           class="fab fa-discord buttonIcon"></i>
         Add to Discord</a>
@@ -156,16 +158,17 @@
       </div>
       <div class="div-2">
         <div class="description">
-          <h1 class="title">
+          <h2 class="title">
             About
-          </h1>
+          </h2>
           <div class="text">
             Suivix is a Discord bot which allows you to take attendance on Discord.
             It uses an online interface to make your experience more pleasant, simple and efficient.
             <br><br>
             For more information use <code>!suivix help</code>.
             <br><br>
-            Your attendance result contains the date & the absent and present students names. You can find an example <a href="https://suivix.xyz/ressources/example2.png" target="__blank">here</a>.
+            Your attendance result contains the date & the absent and present students names. You can find an example <a
+              href="https://suivix.xyz/ressources/example2.png" target="__blank">here</a>.
           </div>
         </div>
       </div>
@@ -176,9 +179,9 @@
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
         <div class="description">
-          <h1 class="title">
+          <h2 class="title">
             A simple user interface
-          </h1>
+          </h2>
           <div class="text">
             The Suivix interface is especially designed to make your attendance quick and easy.
           </div>
@@ -197,11 +200,12 @@
       </div>
       <div class="div-2">
         <div class="description">
-          <h1 class="title">
+          <h2 class="title">
             Match most of the situations
-          </h1>
+          </h2>
           <div class="text">
-            To take attendance, you can choose up to 4 voice channels and 6 different roles. For example, you can split your class into groups.
+            To take attendance, you can choose up to 4 voice channels and 6 different roles. For example, you can split
+            your class into groups.
           </div>
         </div>
       </div>
@@ -210,9 +214,9 @@
 
   <section class="largeMargin background" style="padding-bottom: 150px;" id="contact">
     <div data-aos="fade-up" data-aos-duration="700">
-      <h1 class="form-title center">
+      <h2 class="form-title center">
         Contact Us
-      </h1>
+      </h2>
       <div class="form-description center">
         If you have any question or you want to contact us, please use this form.
       </div>
@@ -292,8 +296,8 @@
       <p class="copyright center">
         Copyright ©
         <var id="year">2020</var> All rights reserved | Made with <i class="fas fa-heart"></i> by <a
-          href="https://behance.net/mw3y" target="_blank">MΛX</a> (Maxence ESPAGNET), icons from <a href="https://icons8.com"
-          target="_blank">icons8.com</a> & background by <a
+          href="https://behance.net/mw3y" target="_blank">MΛX</a> (Maxence ESPAGNET), icons from <a
+          href="https://icons8.com" target="_blank">icons8.com</a> & background by <a
           href='https://fr.freepik.com/vecteurs-libre/camp-ete-tente-feu-camp-lac_7588841.htm'>upklyak -
           fr.freepik.com</a>
         <br>Special thanks to <strong>"Un_phoque"</strong> (French Developer), <strong>"Michaël Morival"</strong> &
