--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     gtag('config', 'UA-167755232-2');
   </script>
 
+  <link rel="canonical" href="https://draftbot.com">
   <link rel="apple-touch-icon" sizes="128x128"
     href="https://bastlast.github.io/DraftBot-A-Discord-Adventure/public/ressources/logo-min.png" />
   <title>DraftBot - A multiplayer role-play game for Discord</title>
