--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
       </div>
 
       <div class="hero-infos">
-        <div class="title">Draftbot - A Discord Adventure</div>
+        <div>
+          <h1 class="title">DraftBot - A Discord Adventure</h1>
+        </div>
         <a href="https://discord.gg/WwgBfSg" class="button buttonWhite buttonLarge" id="buttonJoin"><i
             class="fab fa-discord buttonIcon"></i>
           Join the community!</a>
