--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
         <a class="logo" href="/"><img src="public/ressources/banner-min.png" alt="logo"></a>
         <nav>
           <ul class="nav__links">
-            <li><a target="_blank" href="https://guide.draftbot.com">About</a></li>
+            <li><a rel="noopener" target="_blank" href="https://guide.draftbot.com">About</a></li>
             <li><a href="#add">Add the bot to your server</a></li>
-            <li><a target="_blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
-            <li><a target="_blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
-            <li><a target="_blank" href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
+            <li><a rel="noopener" target="_blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
+            <li><a rel="noopener" target="_blank"
+                href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
+            <li><a rel="noopener" target="_blank" href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
           </ul>
         </nav>
         <!-- TODO: 
@@ -75,11 +76,12 @@
         <a class="close">&times;</a>
         <div class="overlay__content">
           <ul>
-            <li><a target="_blank" href="https://guide.draftbot.com">About</a></li>
+            <li><a rel="noopener" target="_blank" href="https://guide.draftbot.com">About</a></li>
             <li><a href="#add">Add the bot to your server</a></li>
-            <li><a target="_blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
-            <li><a target="_blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
-            <li><a target="_blank" href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
+            <li><a rel="noopener" target="_blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
+            <li><a rel="noopener" target="_blank"
+                href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
+            <li><a rel="noopener" target="_blank" href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
             <!-- TODO: 
             <li><a href="/fr">Passer en Français</a></li>
           -->
@@ -192,8 +194,8 @@
           <div class="text">
             The whole community works together to create and improve the game experience. Your help is more than
             welcome!
-            You can follow our progression <a href="https://github.com/BastLast/DraftBot-A-Discord-Adventure"
-              target="_blank">here on github!</a>
+            You can follow our progression <a rel="noopener"
+              href="https://github.com/BastLast/DraftBot-A-Discord-Adventure" target="_blank">here on github!</a>
           </div>
         </div>
       </div>
@@ -218,7 +220,7 @@
             The bot only needs basic permissions <b>in one channel</b> to be fully functional!
             All the features are unlocked without giving access to your precious server's admin pannel.
             <br><b>Join the DraftBot's discord server to add the bot to your server: <a
-                href="https://discord.com/invite/5JqrMtZ" target="_blank">Click here!</a></b>
+                href="https://discord.com/invite/5JqrMtZ" target="_blank" rel="noopener">Click here!</a></b>
           </div>
         </div>
       </div>
@@ -234,7 +236,8 @@
           </h2>
           <div class="text">
             We wrote a complete guide to help you start your adventure and contribute to the project! You can learn
-            everything about the project <a href="https://guide.draftbot.com" target="_blank">here on gitbook!</a>
+            everything about the project <a rel="noopener" href="https://guide.draftbot.com" target="_blank">here on
+              gitbook!</a>
           </div>
         </div>
       </div>
@@ -298,11 +301,11 @@
 
       <p class="copyright center">
         MIT License -
-        <var id="year">2020</var> | Check Draftbot on <a href="https://twitter.com/Draftbot_"
+        <var id="year">2020</var> | Check Draftbot on <a rel="noopener" href="https://twitter.com/Draftbot_"
           target="_blank">Twitter</a> ! |Made with <i class="fas fa-heart"></i> by
-        <a href="https://behance.net/mw3y" target="_blank">MΛX</a> and <a href="https://twitter.com/Bastlast_"
-          target="_blank">BastLast</a>, icons from
-        <a href="https://icons8.com" target="_blank">icons8.com</a> &
+        <a href="https://behance.net/mw3y" rel="noopener" target="_blank">MΛX</a> and <a
+          href="https://twitter.com/Bastlast_" target="_blank">BastLast</a>, icons from
+        <a href="https://icons8.com" rel="noopener" target="_blank">icons8.com</a> &
         background by <a
           href='https://www.freepik.com/free-vector/medieval-castle-interior-flat-cartoon-composition-with-king-throne-armed-knight-coat-arms-guard_6845842.htm'>macrovector
           -
