--- a/fr/index.html
+++ b/fr/index.html
@@ -91,8 +91,7 @@
       <div class="title">A Discord Adventure</div>
       <div class="description">The story takes place in a medieval world where the player embodies an adventurer who
         wants<br>to win a competition launched by the king, to win the princess' hand.</div>
-      <a href="/invite" class="button buttonWhite buttonLarge" style="margin-top: 24px"><i
-          class="fab fa-discord buttonIcon"></i>
+      <a href="/invite" class="button buttonWhite buttonLarge"><i class="fab fa-discord buttonIcon"></i>
         Add to Discord</a>
       <a href="/servers" class="button buttonGrey buttonLarge buttonUse"><i
           class="fas fa-chevron-right buttonIcon"></i>More infos</a>
