--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
             <li><a rel="noopener" target="_blank" href="https://guide.draftbot.com">About</a></li>
             <li><a href="#add">Add the bot to your server</a></li>
             <li><a rel="noopener" target="_blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
-            <li><a rel="noopener" target="_blank"
-                href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
-            <li><a rel="noopener" target="_blank" href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
+            <li><a rel="noopener" target="_blank" href="https://github.com/DraftBot-A-Discord-Adventure">Github</a></li>
+            <li><a rel="noopener" target="_blank" href="https://history.draftbot.com">History</a>
+            </li>
+            <li><a rel="noopener" target="_blank" href="https://discord.com/invite/5JqrMtZ">I need help</a></li>
           </ul>
         </nav>
         <!-- TODO: 
@@ -79,9 +80,10 @@
             <li><a rel="noopener" target="_blank" href="https://guide.draftbot.com">About</a></li>
             <li><a href="#add">Add the bot to your server</a></li>
             <li><a rel="noopener" target="_blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
-            <li><a rel="noopener" target="_blank"
-                href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
-            <li><a rel="noopener" target="_blank" href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
+            <li><a rel="noopener" target="_blank" href="https://github.com/DraftBot-A-Discord-Adventure">Github</a></li>
+            <li><a rel="noopener" target="_blank" href="https://history.draftbot.com">History</a>
+            </li>
+            <li><a rel="noopener" target="_blank" href="https://discord.com/invite/5JqrMtZ">I need help</a></li>
             <!-- TODO: 
             <li><a href="/fr">Passer en Français</a></li>
           -->
