Changed site name property

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     content="DraftBot is an open-source Discord bot based on a multiplayer text adventure game. Begin your journey in a medieval world and battle to win the kingdom's princess's hand.">
   <meta property='og:image'
     content='https://bastlast.github.io/DraftBot-A-Discord-Adventure/public/ressources/logo-min.png' />
-  <meta property="og:site_name" content="draftbot.draft" />
+  <meta property="og:site_name" content="draftbot.com" />
 
   <!-- Favicon -->
   <link href="public/ressources/favicon.ico" rel="shortcut icon" type="image/x-icon" />
