suppression classe inutile

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <body>
   <div class="hero-bg">
-    <div class="test">
+    <div>
       <header>
         <a class="logo" href="/"><img src="public/ressources/banner-min.png" alt="logo"></a>
         <nav>
