--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       <p class="copyright center">
         MIT License -
         <var id="year">2020</var> | Check Draftbot on <a rel="noopener" href="https://twitter.com/Draftbot_"
-          target="_blank">Twitter</a> ! |Made with <i class="fas fa-heart"></i> by
+          target="_blank">Twitter</a> ! | This website was made with <i class="fas fa-heart"></i> by
         <a href="https://behance.net/mw3y" rel="noopener" target="_blank">MΛX</a> and <a
           href="https://twitter.com/Bastlast_" target="_blank">BastLast</a>, icons from
         <a href="https://icons8.com" rel="noopener" target="_blank">icons8.com</a> &
