--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <ul class="nav__links">
             <li><a rel="noopener" target="_blank" href="https://guide.draftbot.com">About</a></li>
             <li><a href="#add">Add the bot to your server</a></li>
-            <li><a rel="noopener" target="_blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
+            <li><a rel="noopener" target="_blank" href="./public/pages/donate.html">Donate</a></li>
             <li><a rel="noopener" target="_blank" href="https://github.com/DraftBot-A-Discord-Adventure">Github</a></li>
             <li><a rel="noopener" target="_blank" href="https://history.draftbot.com">History</a>
             </li>
