--- a/public/pages/donate.html
+++ b/public/pages/donate.html
@@ -23,7 +23,6 @@
         integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
         crossorigin="anonymous" as="style">
     <link rel="stylesheet" href="../css/home.css">
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
         integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
         crossorigin="anonymous"></script>
@@ -146,22 +145,68 @@
 
 
     <section class="mediumMargin paddingWave">
-        <div class="container" data-aos="fade-up" data-aos-duration="700">
-            <article class="card">
-                <div class="thumb"></div>
-                <div class="infos">
-                    <h2 class="title">new york city<span class="flag"></span></h2>
-                    <h3 class="date">november 2 - 4</h3>
-                    <h3 class="seats">seats remaining: 2</h3>
-                    <p class="txt">
-                        Join us for our Live Infinity Session in
-                        beautiful New York City. This is a 3 day
-                        intensive workshop where you'll learn
-                        how to become a better version of...
-                    </p>
-                    <h3 class="details">event details</h3>
+        <div data-aos="fade-up" data-aos-duration="700">
+            <div class="cardLine">
+                <div class="cardContainer">
+                    <article class="card">
+                        <div class="thumb"></div>
+                        <div class="infos">
+                            <h2 class="title">🙏 Acknowledgement</h2>
+                            <h3 class="date">1€</h3>
+                            <h3 class="seats">Here are the perks you unlock with this donation :</h3>
+                            <p class="txt">
+                                - Donator badge
+                            </p>
+                            <p class="txt">
+                                - Donator role</p>
+                            <h3 class="details">Support!</h3>
+                        </div>
+                    </article>
                 </div>
-            </article>
+                <div class="cardContainer">
+                    <article class="card">
+                        <div class="thumb"></div>
+                        <div class="infos">
+                            <h2 class="title">🎉 Recognition</h2>
+                            <h3 class="date">5€</h3>
+                            <h3 class="seats">Here are the perks you unlock with this donation :</h3>
+                            <p class="txt">
+                                - Donator badge
+                            </p>
+                            <p class="txt">
+                                - Donator role
+                            </p>
+                            <p class="txt">
+                                - Name a new item
+                            </p>
+                            <h3 class="details">Support!</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="cardContainer">
+                    <article class="card">
+                        <div class="thumb"></div>
+                        <div class="infos">
+                            <h2 class="title">🤗 Support</h2>
+                            <h3 class="date">10€</h3>
+                            <h3 class="seats">Here are the perks you unlock with this donation :</h3>
+                            <p class="txt">
+                                - Donator badge
+                            </p>
+                            <p class="txt">
+                                - Donator role
+                            </p>
+                            <p class="txt">
+                                - Name a new item
+                            </p>
+                            <p class="txt">
+                                - DraftBot sticker
+                            </p>
+                            <h3 class="details">Support!</h3>
+                        </div>
+                    </article>
+                </div>
+            </div>
         </div>
         <div class="waves">
             <svg width="100%" height="175px" fill="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
