--- a/public/pages/donate.html
+++ b/public/pages/donate.html
@@ -149,7 +149,7 @@
             <div class="cardLine">
                 <div class="cardContainer">
                     <article class="card">
-                        <div class="thumb"></div>
+                        <div class="thumb one"></div>
                         <div class="infos">
                             <h2 class="title">🙏 Acknowledgement</h2>
                             <h3 class="date">1€</h3>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="cardContainer">
                     <article class="card">
-                        <div class="thumb"></div>
+                        <div class="thumb two"></div>
                         <div class="infos">
                             <h2 class="title">🎉 Recognition</h2>
                             <h3 class="date">5€</h3>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="cardContainer">
                     <article class="card">
-                        <div class="thumb"></div>
+                        <div class="thumb three"></div>
                         <div class="infos">
                             <h2 class="title">🤗 Support</h2>
                             <h3 class="date">10€</h3>
