--- a/public/pages/donate.html
+++ b/public/pages/donate.html
@@ -88,7 +88,7 @@
             </div>
         </div>
     </div>
-    <div class="smallWaves">
+    <div class="smallMargin smallWaves">
         <svg width="100%" height="175px" fill="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
                 <stop offset="0%" stop-color="#fff" />
