--- a/public/pages/donate.html
+++ b/public/pages/donate.html
@@ -39,10 +39,7 @@
             <a class="logo" href="/"><img src="../ressources/banner-min.png" alt="logo"></a>
             <nav>
                 <ul class="nav__links">
-                    <li><a rel="noopener" target="_blank" href="https://guide.draftbot.com">About</a></li>
-                    <li><a href="#add">Add the bot to your server</a></li>
-                    <li><a rel="noopener" target="_blank" href="https://github.com/sponsors/BastLast">Donate</a>
-                    </li>
+                    <li><a rel="noopener" target="_blank" href="https://guide.draftbot.com/v/en">About</a></li>
                     <li><a rel="noopener" target="_blank"
                             href="https://github.com/DraftBot-A-Discord-Adventure">Github</a></li>
                     <li><a rel="noopener" target="_blank" href="https://history.draftbot.com">History</a>
@@ -71,10 +68,7 @@
             <a class="close">&times;</a>
             <div class="overlay__content">
                 <ul>
-                    <li><a rel="noopener" target="_blank" href="https://guide.draftbot.com">About</a></li>
-                    <li><a href="#add">Add the bot to your server</a></li>
-                    <li><a rel="noopener" target="_blank" href="https://github.com/sponsors/BastLast">Donate</a>
-                    </li>
+                    <li><a rel="noopener" target="_blank" href="https://guide.draftbot.com/v/en">About</a></li>
                     <li><a rel="noopener" target="_blank"
                             href="https://github.com/DraftBot-A-Discord-Adventure">Github</a></li>
                     <li><a rel="noopener" target="_blank" href="https://history.draftbot.com">History</a>
