Added donation links

--- a/public/pages/donate.html
+++ b/public/pages/donate.html
@@ -153,7 +153,9 @@
                             </p>
                             <p class="txt">
                                 - Donator role</p>
-                            <h3 class="details">Support!</h3>
+                            <a target="_blanks" href="https://www.paypal.com/paypalme/bastlast/1">
+                                <p class="donationButton button buttonGrey buttonSmall bold">Make a donation</p>
+                            </a>
                         </div>
                     </article>
                 </div>
@@ -173,7 +175,9 @@
                             <p class="txt">
                                 - Name a new item
                             </p>
-                            <h3 class="details">Support!</h3>
+                            <a target="_blanks" href="https://www.paypal.com/paypalme/bastlast/5">
+                                <p class="donationButton button buttonGrey buttonSmall bold">Make a donation</p>
+                            </a>
                         </div>
                     </article>
                 </div>
@@ -196,7 +200,9 @@
                             <p class="txt">
                                 - DraftBot sticker
                             </p>
-                            <h3 class="details">Support!</h3>
+                            <a target="_blanks" href="https://www.paypal.com/paypalme/bastlast/10">
+                                <p class="donationButton button buttonGrey buttonSmall bold">Make a donation</p>
+                            </a>
                         </div>
                     </article>
                 </div>
