--- a/public/pages/donate.html
+++ b/public/pages/donate.html
@@ -137,6 +137,47 @@
     </div>
     </div>
 
+    <section class="mediumMargin" id="add">
+        <div class="container" data-aos="fade-up" data-aos-duration="700">
+            <div class="div-1">
+                <img alt="server" src="../ressources/21103.jpg" class="longScreen pc-content">
+            </div>
+            <div class="div-2">
+                <div class="description">
+                    <h2 class="title">
+                        Help us run DraftBot!
+                    </h2>
+                    <div class="text">
+                        We will use your money <b>only for DraftBot</b>.
+                        Our expenses includes paying for the hosting of the bot, the website and potential services
+                        necessary to work on the bot.
+                        <br>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mediumMargin" id="add">
+        <div class="container" data-aos="fade-up" data-aos-duration="700">
+            <div class="div-1">
+                <div class="description">
+                    <h2 class="title">
+                        Receive cool stuff back!
+                    </h2>
+                    <div class="text">
+                        With the support role you know the content of the next update before everyone else. You can also
+                        have a cool badge displayed under your profile or even receive a sticker !
+                        <br> All the donation rewards are described below !
+                    </div>
+                </div>
+            </div>
+            <div class="div-2">
+                <img alt="server" src="../ressources/badge.png" class="longScreen pc-content">
+            </div>
+        </div>
+    </section>
+
 
     <section class="mediumMargin paddingWave">
         <div data-aos="fade-up" data-aos-duration="700">
