--- a/donate/index.html
+++ b/donate/index.html
@@ -18,11 +18,11 @@
     <link href="../public/ressources/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="../public/ressources/favicon.ico" rel="icon" type="image/x-icon" />
 
-    <link rel="preload" href="../css/home.css" as="style">
+    <link rel="preload" href="../public/css/home.css" as="style">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
         integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
         crossorigin="anonymous" as="style">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../public/css/home.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
         integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
         crossorigin="anonymous"></script>
